--- a/MovieBackend.csproj
+++ b/MovieBackend.csproj
@@ -7,9 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
+    <Compile Remove="MongoDataAccess\**" />
+    <Content Remove="MongoDataAccess\**" />
+    <EmbeddedResource Remove="MongoDataAccess\**" />
+    <None Remove="MongoDataAccess\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="MongoDataAccess\MongoDataAccess.csproj" />
   </ItemGroup>
 
 </Project>
