Added authentication with Identity and JWT.

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,9 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "moviesuggestiondb",
     "MovieCollection": "movies"
+  },
+  "JwtSettings": {
+    "Issuer": "cristianmovies.com",
+    "Audience": "cristianmovies.com"
   }
 }
