--- a/src/Movies.Api/appsettings.json
+++ b/src/Movies.Api/appsettings.json
@@ -13,6 +13,7 @@
   },
   "JwtSettings": {
     "Issuer": "cristianmovies.com",
-    "Audience": "cristianmovies.com"
+    "Audience": "cristianmovies.com",
+    "Duration": 60
   }
 }
